objects/CLT_Picklist__mdt.object
<CustomObject>
    <label>CLT Picklist</label>
    <pluralLabel>CLT Picklists</pluralLabel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_Fields__c</fullName>
        <label>Exclude Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ControllingFieldName__c</fullName>
        <label>ControllingFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Take_All_Object_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Take All Object List</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>